# sentencer

./: .gitignore  Cargo.toml  LICENSE  README.md  content.toml  dune-project  go.mod  go.sum  result.txt  spago.dhall  stack.yaml
content/: hs_result_arg.txt  hs_result_ninos.txt  hs_result_tren.txt  ps_result_arg.txt  ps_result_tren.txt  sample_arg.txt  sample_ninos.txt  sample_tren.txt
gsentencer/: main.go
gsentencer/lib/: config.go
gsentencer/src/: config.go  util.go
hsentencer/: CHANGELOG.md  LICENSE  README.md  hsentencer.cabal  stack.yaml
hsentencer/app/: Main.hs
hsentencer/src/: Config.hs  Util.hs
osentencer/lib/: dune  utils.ml
osentencer/test/: dune
psentencer/: package-lock.json  package.json  spago.dhall
psentencer/src/: Main.purs
psentencer/test/: Main.purs
rsentencer/src/: main.rs  util.rs
