[package]
name = "rsentencer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.7.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.104", default-features = false, features = ["alloc"] }

[[bin]]
name = "rsentencer"
path = "rsentencer/src/main.rs"
